[gd_scene load_steps=3 format=3 uid="uid://cc5vmtbby4xy0"]

[ext_resource type="Script" uid="uid://74xofhorearv" path="res://ui/game_menu/shop/shop_item.gd" id="1_k8gfq"]
[ext_resource type="Texture2D" uid="uid://bhqylbt87pmer" path="res://resources/themes/Joyous.png" id="2_k3g6w"]

[node name="ShopItem" type="PanelContainer"]
offset_right = 47.0
offset_bottom = 143.0
script = ExtResource("1_k8gfq")

[node name="ShopItemContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="ShopItemContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_k3g6w")
expand_mode = 5
stretch_mode = 6

[node name="NameLabel" type="Label" parent="ShopItemContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ShopItemLabel"
text = "FLAMETHROWER"

[node name="TypeLabel" type="Label" parent="ShopItemContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TYPE"

[node name="DescriptionLabel" type="Label" parent="ShopItemContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TYPE"

[node name="CostLabel" type="Label" parent="ShopItemContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "PRICE"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
